--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-transformer-sharp": "^2.2.0",
     "gatsby-plugin-sass": "^2.3.12",
     "modern-normalize": "^0.5.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "polished": "^3.4.1",
     "prism-themes": "^1.1.0",
