--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-canonical-urls": "^2.1.0",
     "gatsby-plugin-emotion": "^4.1.0",
+    "gatsby-plugin-force-trailing-slashes": "^1.0.4",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
-    "gatsby-plugin-force-trailing-slashes": "^1.0.4",
     "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-prismjs": "^3.3.0",
     "gatsby-remark-responsive-iframe": "^2.2.0",
@@ -45,7 +46,6 @@
     "gatsby-transformer-json": "^2.2.0",
     "gatsby-transformer-remark": "^2.5.0",
     "gatsby-transformer-sharp": "^2.2.0",
-    "gatsby-plugin-sass": "^2.3.12",
     "modern-normalize": "^0.5.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
@@ -55,6 +55,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-icons": "^4.2.0",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
