--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^4.2.0",
+    "sweetalert": "^2.1.2",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
